src/objects/AccountSegmentMapBean__mdt.object
<CustomObject>
    <fields>
        <fullName>AcctSegId__c</fullName>
        <label>AcctSegId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingServiceCenter__c</fullName>
        <label>BillingServiceCenter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CollectionsCenter__c</fullName>
        <label>CollectionsCenter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConfigTagId__c</fullName>
        <label>ConfigTagId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FranchiseCode__c</fullName>
        <label>FranchiseCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InsertGrpId__c</fullName>
        <label>InsertGrpId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <label>Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MktCode__c</fullName>
        <label>MktCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MsgGrpId__c</fullName>
        <label>MsgGrpId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RateClass__c</fullName>
        <label>RateClass</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RemitServiceCenter__c</fullName>
        <label>RemitServiceCenter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RevRcvCostCtr__c</fullName>
        <label>RevRcvCostCtr</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceInquiryCenter__c</fullName>
        <label>ServiceInquiryCenter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VipCode__c</fullName>
        <label>VipCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>AccountSegmentMapBean</label>
    <pluralLabel>AccountSegmentMapBean</pluralLabel>
</CustomObject>